--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+            integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+            
+        <link rel="stylesheet" href="css/style.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
     <title>Document</title>
 </head>
+
 <body>
     <div class="hero">
 
         <div class="content">
             <h4>Hello, my name is</h4>
-            <h1>Nurali <span>Yuldashov</span></h1>
+            <h1 class="h1   ">Nurali <span>Yuldashov</span></h1>
             <h3>I'm a Web Developer</h3>
             <div class="newsletter">
                 <form>
@@ -28,64 +33,62 @@
             <div class="about-text">
                 <h2>About Me</h2>
                 <h5>Developer <span>& Designer</span></h5>
-                <p>I am a front-end developer. I can provide clean code and pixel perfect design. I also make 
-                    the website more & more interactive with web animation. A responsive design 
+                <p>I am a front-end developer. I can provide clean code and pixel perfect design. I also make
+                    the website more & more interactive with web animation. A responsive design
                     makes your website accessible to all users, regradless of their device.
                 </p>
                 <button type="button">Let's Talk</button>
             </div>
         </div>
+        <div class="img"></div>
     </div>
 
     <!-- service section start -->
     <div class="service">
         <div class="title">
-            <h2>Our Services</h2>
+            <h2>Our Projects</h2>
         </div>
-
         <div class="box">
             <div class="card">
                 <i class="fas fa-bars"></i>
-                <h5>Web Development</h5>
                 <div class="pra">
-                    <p>Every website should be build with two primary goals: 
+                    <p>Every website should be build with two primary goals:
                         Firstly, it needs to work across all devices. Secondly,
-                         it needs be fast as possible.</p>
-                         <p style="text-align: center;">
-                            <a class="button" href="#">Read More</a>
-                        </p>
+                        it needs be fast as possible.</p>
+                    </div>
+                    <a class="button" href="#">
+                        Web Development
+                    </a>
                 </div>
-            </div>
             <div class="card">
                 <ion-icon name="game-controller-outline" class="game"></ion-icon>
-                <h5>RGB Game</h5>
                 <div class="pra">
                     <p>
                         Select a color from the RGB code
                         Red, Green, and Blue range in value from 0 to 255. <br>
                         That is, RGB (255,255,255) is white or RGB (0,0,0) is black.
                     </p>
-                         <p style="text-align: center;">
-                            <a class="button" href="RGB_Game/index.html">Read More</a>
-                        </p>
                 </div>
+                <a class="button" href="RGB_Game/index.html">
+                    RGB Game
+                </a>
             </div>
             <div class="card">
                 <ion-icon name="calendar-outline" class="calendar"></ion-icon>
-                <h5>Birthday Calculator</h5>
                 <div class="pra">
-                    <p>You can calculate one click you'll see a lot of information <br> about Your ge</p>
-                         <p style="text-align: center;">
-                            <a class="button" href="Birthday/index.html">Read More</a>
-                        </p>
+                        <p>You can calculate one click you'll see a lot of information <br> about Your age</p>
                 </div>
+                <a class="button" href="Birthday/index.html">
+                    Age Calculator
+                </a>
             </div>
         </div>
-    </div> 
+    </div>
 
 
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
