--- a/index.html
+++ b/index.html
@@ -7,21 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
             integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-            
-        <link rel="stylesheet" href="css/style.css">
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">        
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Document</title>
 </head>
 
 <body>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
     <div class="hero">
 
         <div class="content">
             <h4>Hello, my name is</h4>
-            <h1 class="h1   ">Nurali <span>Yuldashov</span></h1>
+            <h1 class="h1">Nurali <span>Yuldashov</span></h1>
             <h3>I'm a Web Developer</h3>
             <div class="newsletter">
                 <form>
@@ -49,7 +54,8 @@
             <h2>Our Projects</h2>
         </div>
         <div class="box">
-            <div class="card">
+
+            <div class="card"  data-aos="fade-right">
                 <i class="fas fa-bars"></i>
                 <div class="pra">
                     <p>Every website should be build with two primary goals:
@@ -60,7 +66,7 @@
                         Web Development
                     </a>
                 </div>
-            <div class="card">
+            <div class="card"  data-aos="fade-left">
                 <ion-icon name="game-controller-outline" class="game"></ion-icon>
                 <div class="pra">
                     <p>
@@ -73,7 +79,7 @@
                     RGB Game
                 </a>
             </div>
-            <div class="card">
+            <div class="card"  data-aos="fade-right">
                 <ion-icon name="calendar-outline" class="calendar"></ion-icon>
                 <div class="pra">
                         <p>You can calculate one click you'll see a lot of information <br> about Your age</p>
