--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
 
         <div class="content">
             <h4  data-aos="zoom-in-right" data-aos-duration="500">Hello, my name is</h4>
-            <h1 class="h1" data-aos="zoom-in-left" data-aos-delay="500" data-aos-duration="800">Nurali <span>Yuldashov</span></h1>
-            <h3 data-aos="zoom-in-right" data-aos-delay="1000" data-aos-duration="500">I'm a Web Developer</h3>
-            <div class="newsletter" data-aos="zoom-in-left" data-aos-delay="1500" data-aos-duration="800">
+            <h1 class="h1" data-aos="zoom-in-left" data-aos-delay="100" data-aos-duration="800">Nurali <span>Yuldashov</span></h1>
+            <h3 data-aos="zoom-in-right" data-aos-delay="200" data-aos-duration="500">I'm a Web Developer</h3>
+            <div class="newsletter" data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="800">
                 <form>
                     <input type="email" name="email" id="mail" placeholder="Enter Your Email">
-                    <input type="submit" name="submit" id="submit" value="Lets Start"  data-aos="zoom-in-right" data-aos-delay="1800" data-aos-duration="800">
+                    <input type="submit" name="submit" id="submit" value="Lets Start"  data-aos="zoom-in-right" data-aos-delay="500" data-aos-duration="800">
                 </form>
             </div>
 
             <div class="about-text">
-                <h2 data-aos="fade-right" data-aos-delay="1500"  data-aos-duration="500">About Me</h2>
-                <h5 data-aos="zoom-in-left" data-aos-delay="1500" data-aos-duration="500">Developer <span>& Designer</span></h5>
-                <p data-aos="zoom-in-right" data-aos-delay="2500" data-aos-duration="400">I am a front-end developer. I can provide clean code and pixel perfect design. I also make
+                <h2 data-aos="fade-right" data-aos-delay="400"  data-aos-duration="500">About Me</h2>
+                <h5 data-aos="zoom-in-left" data-aos-delay="500" data-aos-duration="500">Developer <span>& Designer</span></h5>
+                <p data-aos="zoom-in-right" data-aos-delay="600" data-aos-duration="400">I am a front-end developer. I can provide clean code and pixel perfect design. I also make
                     the website more & more interactive with web animation. A responsive design
                     makes your website accessible to all users, regradless of their device.
                 </p>
-                <button type="button" data-aos="zoom-in-left" data-aos-delay="3000" data-aos-duration="800">Let's Talk</button>
+                <button type="button" data-aos="zoom-in-left" data-aos-duration="800">Let's Talk</button>
             </div>
         </div>
         <div class="img"></div>
