added new aplication

--- a/Birthday/index.html
+++ b/Birthday/index.html
@@ -72,6 +72,11 @@
                     <a class="pages_button_a" href="../RGB_Game/">RGB Game</a>
                 </div>
             </div>
+            <div class="parent_dark">
+                <div class="day" onclick="theme()">
+                    <h3>Dark</h3>
+                </div>
+            </div>
         </div>
 
 <!-- ?=====================================================  Section  Famous ========================================================== -->
@@ -97,7 +102,6 @@
             <div class="button" value="12" onclick="filterByMoth(12)">December</div>
         </div>
 
-        
     </div>
     
 
