--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
     <div class="hero">
 
         <div class="content">
@@ -43,7 +43,7 @@
                     the website more & more interactive with web animation. A responsive design
                     makes your website accessible to all users, regradless of their device.
                 </p>
-                <button type="button" data-aos="zoom-in-left" data-aos-duration="800">Let's Talk</button>
+                <button type="button" data-aos="zoom-in-left" data-aos-duration="900">Let's Talk</button>
             </div>
         </div>
         <div class="img"></div>
@@ -87,6 +87,15 @@
                 </div>
                 <a class="button" href="Birthday/index.html">
                     Age Calculator
+                </a>
+            </div>
+            <div class="card"  data-aos="fade-right">
+                <ion-icon name="keypad-outline" class="calendar"></ion-icon>
+                <div class="pra">
+                        <p>Generate strong passwords for your profile, email or any other things that require privacy </p>
+                </div>
+                <a class="button" href="Password_Generator/index.html">
+                    Password Generator
                 </a>
             </div>
         </div>
