added some responsive media

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">        
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/media-style-500px.css">
+    <link rel="stylesheet" href="css/media-style.css">
 
     <title>Document</title>
 </head>
@@ -89,7 +89,7 @@
                     Age Calculator
                 </a>
             </div>
-            <div class="card"  data-aos="fade-right">
+            <div class="card"  data-aos="fade-left">
                 <ion-icon name="keypad-outline" class="calendar"></ion-icon>
                 <div class="pra">
                         <p>Generate strong passwords for your profile, email or any other things that require privacy </p>
